fix collapse.show center

--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,18 @@ body {
     opacity: 85%;
 }
 
+.collapse.show {
+    text-align: center;
+}
+
 #countdown {
     color: #ffffff;
     font-size: 20px;
     font-weight: 500;
+}
+
+.barCountdown p {
+    justify-content: center;
 }
 
 .barSearch a {
